infrastructure/k8s-templates/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: omnimedical
  labels:
    name: omnimedical
    version: v2.0.0
    environment: production
